--- a/src/alog/view/FrmGui.form
+++ b/src/alog/view/FrmGui.form
@@ -286,7 +286,7 @@
         <Component class="javax.swing.JTextPane" name="txpIde">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Consolas" size="12" style="0"/>
+              <Font name="Monospaced" size="12" style="0"/>
             </Property>
           </Properties>
           <Events>
@@ -361,7 +361,7 @@
               <Color blue="f0" green="f0" id="FormattedTextField.disabledBackground" palette="3" red="f0" type="palette"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Consolas" size="12" style="0"/>
+              <Font name="Monospaced" size="12" style="0"/>
             </Property>
           </Properties>
           <Events>
@@ -393,7 +393,7 @@
               <Color blue="f0" green="f0" id="FormattedTextField.disabledBackground" palette="3" red="f0" type="palette"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Consolas" size="12" style="0"/>
+              <Font name="Monospaced" size="12" style="0"/>
             </Property>
           </Properties>
         </Component>
@@ -422,7 +422,7 @@
               <Color blue="f0" green="f0" id="FormattedTextField.disabledBackground" palette="3" red="f0" type="palette"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Consolas" size="12" style="0"/>
+              <Font name="Monospaced" size="12" style="0"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[13, 66]"/>
