--- a/src/fatec/alg/gui/FrmGui.form
+++ b/src/fatec/alg/gui/FrmGui.form
@@ -104,7 +104,7 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+EQUALS"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Aumentar letra"/>
+                <Property name="text" type="java.lang.String" value="Aumentar fonte"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mitAumentarZoomActionPerformed"/>
@@ -115,7 +115,7 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+MINUS"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Diminuir letra"/>
+                <Property name="text" type="java.lang.String" value="Diminuir fonte"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mitDiminuirZoomActionPerformed"/>
@@ -126,7 +126,7 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Restaurar letra"/>
+                <Property name="text" type="java.lang.String" value="Restaurar tam. fonte"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mitRestaurarZoomActionPerformed"/>
@@ -245,6 +245,7 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btnProxPerc" min="-2" pref="218" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="lblFontSize" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="94" max="32767" attributes="0"/>
                   </Group>
@@ -277,7 +278,10 @@
                   <Component id="lblLogo1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblFontSize" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jScrollPane1" pref="307" max="32767" attributes="0"/>
@@ -552,6 +556,14 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSairActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblFontSize">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="10" style="0"/>
+        </Property>
+        <Property name="horizontalTextPosition" type="int" value="2"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
